--- a/applications/app-service/src/main/resources/messages_en.properties
+++ b/applications/app-service/src/main/resources/messages_en.properties
@@ -15,3 +15,4 @@ USR_014=The user ID cannot be null
 USR_015=User not found
 USR_016=The document is already in use
 USR_017=Database constraint violation
+USR_018=Role not found
