--- a/applications/app-service/src/main/resources/messages_en.properties
+++ b/applications/app-service/src/main/resources/messages_en.properties
@@ -16,3 +16,6 @@ USR_015=User not found
 USR_016=The document is already in use
 USR_017=Database constraint violation
 USR_018=Role not found
+USR_019=Invalid authentication credentials
+USR_020=User validation failed
+USR_021=The user is locked
