fix test and dockerfile

--- a/applications/app-service/src/main/resources/messages.properties
+++ b/applications/app-service/src/main/resources/messages.properties
@@ -1,21 +1,21 @@
-USR_001=El formato del correo electrï¿½nico no es vï¿½lido
+USR_001=El formato del correo electrónico no es válido
 USR_002=El salario no puede ser negativo
 USR_003=El salario no puede ser mayor a 15,000,000
-USR_004=El nombre no puede ser nulo o vacï¿½o
-USR_005=El apellido no puede ser nulo o vacï¿½o
-USR_006=El correo electrï¿½nico no puede ser nulo o vacï¿½o
+USR_004=El nombre no puede ser nulo o vacío
+USR_005=El apellido no puede ser nulo o vacío
+USR_006=El correo electrónico no puede ser nulo o vacío
 USR_007=El salario no puede ser nulo
-USR_008=El correo electrï¿½nico ya estï¿½ en uso
-USR_009=El documento no es vï¿½lido
-USR_010=El telï¿½fono no es vï¿½lido
+USR_008=El correo electrónico ya estí en uso
+USR_009=El documento no es válido
+USR_010=El telefono no es válido
 USR_011=La fecha de nacimiento no puede ser nula
 USR_012=La fecha de nacimiento no puede estar en el futuro
 USR_013=El usuario debe ser mayor de edad
 USR_014=El ID del usuario no puede ser nulo
 USR_015=Usuario no encontrado
-USR_016=El documento ya estï¿½ en uso
-USR_017=Violaciï¿½n de restricciï¿½n de base de datos
+USR_016=El documento ya esta en uso
+USR_017=Violación de restricción de base de datos
 USR_018=Rol no encontrado
 USR_019=Credenciales de autenticacion invalidas
-USR_020=Validaciï¿½n de usuario fallida
-USR_021=El usuario estï¿½ bloqueado
+USR_020=Validación de usuario fallida
+USR_021=El usuario está bloqueado
